# DigitalHumanTwin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  main.py  main_body_lab.py
src/app/: MainWindow.cpp  MainWindow.h  body_preview_widget.py  layered_body_3d_view.py  main_window.py
src/assets/bodyparts3d/: README.md
src/core/: IModule.h  ModuleManager.h  __init__.py  anatomy_assets.py  anatomy_provider.py  imodule.py  module_manager.py
src/modules/: BodyProfileModule.cpp  BodyProfileModule.h  __init__.py  body_profile_module.py
